--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "colors": "^1.0.3",
     "later": "^1.1.6",
-    "moment": "^2.8.3",
+    "moment-timezone": "^0.2.4",
     "q-io": "^1.11.5",
     "suncalc": "^1.6.0",
     "underscore": "^1.7.0"
