--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "private": true,
   "dependencies": {
+    "basic-auth": "^1.0.0",
     "colors": "^1.0.3",
+    "express": "^4.10.2",
     "later": "^1.1.6",
     "moment-timezone": "^0.2.4",
     "q-io": "^1.11.5",
