--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "private": true,
   "dependencies": {
     "basic-auth": "^1.0.0",
+    "cheerio": "^0.18.0",
     "colors": "^1.0.3",
     "express": "^4.10.2",
+    "jsonfile": "^2.0.0",
     "later": "^1.1.6",
     "moment-timezone": "^0.2.4",
+    "q": "^1.1.1",
     "q-io": "^1.11.5",
     "suncalc": "^1.6.0",
     "underscore": "^1.7.0"
