--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "suncalc": "^1.6.0",
     "underscore": "^1.7.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jshint": "^2.5.10"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
