--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cheerio": "^0.18.0",
     "colors": "^1.0.3",
     "express": "^4.10.2",
+    "extend-error": "0.0.2",
     "jsonfile": "^2.0.0",
     "later": "^1.1.6",
     "moment-timezone": "^0.2.4",
