--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsonfile": "^2.0.0",
     "later": "^1.1.6",
     "moment-timezone": "^0.2.4",
+    "nconf": "^0.7.1",
     "q": "^1.1.1",
     "q-io": "^1.11.5",
     "suncalc": "^1.6.0",
