--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "later": "^1.1.6",
     "moment-timezone": "^0.2.4",
     "nconf": "^0.7.1",
+    "pushbullet": "^1.4.2",
     "q": "^1.1.1",
     "q-io": "^1.11.5",
     "suncalc": "^1.6.0",
