--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "basic-auth": "^1.0.0",
     "cheerio": "^0.18.0",
     "colors": "^1.0.3",
+    "compression": "^1.4.3",
     "express": "^4.10.2",
     "extend-error": "0.0.2",
     "jsonfile": "^2.0.0",
