--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cheerio": "^0.18.0",
     "colors": "^1.0.3",
     "compression": "^1.4.3",
+    "eventemitter2": "^0.4.14",
     "express": "^4.10.2",
     "extend-error": "0.0.2",
     "jsonfile": "^2.0.0",
