--- a/package.json
+++ b/package.json
@@ -9,27 +9,50 @@
   "scripts": {
     "install-service": "sudo forever-service install smarthome-server --script index.js -o ' --server' -f ' --watch' -e 'NODE_ENV=production' --minUptime 5000 --spinSleepTime 2000",
     "uninstall-service": "sudo forever-service delete smarthome-server",
-    "test": "jshint ."
+    "test": "jshint .",
+    "dev": "webpack -d --watch"
+  },
+  "bin": {
+    "smarthome-cli": "cli.js"
   },
   "dependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "basic-auth": "^1.0.0",
+    "bootstrap": "^3.3.7",
     "cheerio": "^0.22.0",
     "colors": "^1.0.3",
     "compression": "^1.4.3",
+    "css-loader": "^0.25.0",
+    "debug": "^2.3.2",
+    "ejs": "^2.5.2",
     "eventemitter2": "^0.4.14",
     "express": "^4.10.2",
     "extend-error": "0.0.2",
+    "file-loader": "^0.9.0",
+    "js-cookie": "^2.1.3",
     "jsonfile": "^2.4.0",
     "later": "^1.2.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "moment-timezone": "^0.5.9",
     "nconf": "^0.8.4",
     "pushbullet": "^1.4.2",
     "q": "^1.1.1",
     "q-io": "^1.11.5",
+    "react": "^15.3.2",
+    "style-loader": "^0.13.1",
     "suncalc": "^1.6.0",
-    "underscore": "^1.8.0"
+    "underscore": "^1.8.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.3"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "babel-register": "^6.18.0",
+    "babel-root-import": "^4.1.5",
     "jshint": "^2.5.10"
   },
   "repository": {
